# drive_by_wire

./: CMakeLists.txt  Project_Description.md  README.md
include/: control_system.h  drive_by_wire_vehicle.h  vehicle_interface.h
src/: control_system.cpp  main.cpp  vehicle_interface.cpp
tests/: CMakeLists.txt  test_control_system.cpp  test_vehicle_interface.cpp
